# invariant-server

./: .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  client.py  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: api.md
playground/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
playground/src/: App.tsx  TraceView.scss  examples.ts  index.css  main.tsx
playground/src/assets/: logo.tsx  spinning.tsx
playground/src/components/: Examples.tsx  examples.tsx
playground/src/components/playground/: policyeditor.tsx  policyviolation.tsx
playground/src/components/traceview/: TraceView.scss  annotations.ts  json-source-map.d.ts  traceview.tsx
playground/src/components/ui/: annotations.tsx  button.tsx  combobox.tsx  command.tsx  mapper.js  popover.tsx  resizable.tsx  toast.tsx  traceview.tsx  use-toast.ts
playground/src/lib/: types.ts  utils.ts
server/: config.py  crud.py  database.py  logging.py  main.py  models.py  nsjail.cfg  schemas.py  utils.py
server/ipc/: __init__.py  controller.py  invariant-ipc.py
server/routers/: monitor.py  policy.py  session.py
server/templates/email/: check-sender
tests/: client.py  test_main.py  test_monitor.py  test_policy.py  test_session.py
