[project]
name = "invariant-server"
version = "0.1.0"
description = "Invariant policy server"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "invariant @ git+https://github.com/invariantlabs-ai/invariant.git",
    "sqlalchemy>=2.0.31",
    "pydantic-settings>=2.3.4",
    ### Invariant extra dependencies
    "presidio-analyzer>=2.2.354",
    "spacy>=3.7.5",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "requests>=2.32.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["server"]
